
* t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 

* bam(...,discrete=TRUE) does not currently deal with the corner case in 
  which no smoother is penalized. Also there is no option to use the identical
  discretization to that used in fitting when predicting.


1.8-41

* slight change in bgam.fitd to check scale parameter estimate converged when
  using bam(...,discrete=TRUE), otherwise scale could be wrong for all fixed
  smoothing parameters.

* predict.gam modified so that 'terms' and 'exclude' control all terms, smooth
  or parametric, in the same way. Including the "(Intercept)" term.

* Warnings from 'model.matrix' suppressed in 'terms2tensor' called by e.g. 
  predict.bamd. There is a warning if any extra contrasts are supplied to 
  model matrix that do not relate to a term in the model (which contradicts 
  the documentation). Doc vs code bug report also filed. 

* Fix of broken rank deficiency handling in gam.fit5. Thanks to Cesko Voeten.

* trind.generator modified to allow return of index functions in place 
  of index arrays.  

* summary.gam (recov/reTest) modified to deal with 'fs' smooths fitted using
  'gamm'. 

* gam.fit4 convergence testing improved and bug fix in computation of dVkk 
  matrix used to check for converged 'infinite' smoothing parameters in bfgs.

1.8-40

* Small gam.fit5 convergence change to reduce chance of repeating step 
  failures.

* ExtractData fix avoiding assumption that 'xt' argument to a smooth is always
  a list (could cause setup failure with e.g. fs smooth). Thanks Keith Woolner.

* Minor changes to mat.c and tprs.c to allow DEFS = -DSTRICT_R_HEADERS build. 

1.8-39

* gam.fit5 convergence logic tightened up, to avoid pointlessly lengthy 
  iterations when can't meet convergence tolerance. Faster, more reliable, 
  but also generates more warnings when tolerances not met.
